load stories list

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <section>
     <div class="relative">
-        <img src="https://storage.googleapis.com/lnco-artifacts.appspot.com/artifacts/cover.jpg"
-            alt="" class="h-64 w-full object-cover mb-6">
-        </div>
+        <img src="https://storage.googleapis.com/lnco-artifacts.appspot.com/artifacts/cover.jpg" alt=""
+            class="h-64 w-full object-cover mb-6">
+    </div>
     <h1 class="mb-8 text-2xl font-semibold tracking-tighter">Software designer, developer.</h1>
     <p class="mb-4">
         I'm a Vim enthusiast and tab advocate, finding unmatched efficiency in Vim's keystroke commands
@@ -10,7 +10,7 @@
         its early error detection ensures cleaner code, and my preference for dark mode, which eases long coding
         sessions by reducing eye strain.
     </p>
-    <div class="my-8">
+    <div class="my-8 mb-24">
         <div>
             <a class="flex flex-col space-y-1 mb-4" href="/blog/vim">
                 <div class="w-full flex flex-col md:flex-row space-x-0 md:space-x-2">
@@ -38,4 +38,42 @@
             </a>
         </div>
     </div>
+    <ul
+        class="mt-8 flex flex-col space-x-0 space-y-2 text-neutral-600 md:flex-row md:space-x-4 md:space-y-0 dark:text-neutral-300">
+        <li>
+            <a class="flex items-center transition-all hover:text-neutral-800 dark:hover:text-neutral-100"
+                rel="noopener noreferrer" target="_blank" href="/rss">
+                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M2.07102 11.3494L0.963068 10.2415L9.2017 1.98864H2.83807L2.85227 0.454545H11.8438V9.46023H10.2955L10.3097 3.09659L2.07102 11.3494Z"
+                        fill="currentColor"></path>
+                </svg>
+                <p class="ml-2 h-7">rss</p>
+            </a>
+        </li>
+        <li>
+            <a class="flex items-center transition-all hover:text-neutral-800 dark:hover:text-neutral-100"
+                rel="noopener noreferrer" target="_blank" href="https://github.com/winter-guy">
+                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M2.07102 11.3494L0.963068 10.2415L9.2017 1.98864H2.83807L2.85227 0.454545H11.8438V9.46023H10.2955L10.3097 3.09659L2.07102 11.3494Z"
+                        fill="currentColor">
+                    </path>
+                </svg>
+                <p class="ml-2 h-7">github</p>
+            </a>
+        </li>
+        <li>
+            <a class="flex items-center transition-all hover:text-neutral-800 dark:hover:text-neutral-100"
+                rel="noopener noreferrer" target="_blank"
+                href="https://vercel.com/templates/next.js/portfolio-starter-kit">
+                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M2.07102 11.3494L0.963068 10.2415L9.2017 1.98864H2.83807L2.85227 0.454545H11.8438V9.46023H10.2955L10.3097 3.09659L2.07102 11.3494Z"
+                        fill="currentColor"></path>
+                </svg>
+                <p class="ml-2 h-7">view source</p>
+            </a>
+        </li>
+    </ul>
 </section>
