added stories, post

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,34 +5,16 @@
     </div>
     <h1 class="mb-8 text-2xl font-semibold tracking-tighter">Software designer, developer.</h1>
     <p class="mb-4">
-        I'm a Vim enthusiast and tab advocate, finding unmatched efficiency in Vim's keystroke commands
-        and tabs' flexibility for personal viewing preferences. This extends to my support for static typing, where
-        its early error detection ensures cleaner code, and my preference for dark mode, which eases long coding
-        sessions by reducing eye strain.
+        I'm Raja, a developer from IN (India). currently this experience is in its alpha stage, 
+        where we delve into technologies enabling individuals to explore spaces and real estate autonomously, on their own terms.
     </p>
-    <div class="my-8 mb-24">
-        <div>
-            <a class="flex flex-col space-y-1 mb-4" href="/blog/vim">
+    <div class="my-8 mb-24 text-sm">
+        <div *ngFor="let item of post$ | async as post">
+            <a class="flex flex-col space-y-1 mb-2" [routerLink]="['/post']" [queryParams]="{ page: item.id }">
                 <div class="w-full flex flex-col md:flex-row space-x-0 md:space-x-2">
-                    <p class="text-neutral-600 dark:text-neutral-400 w-[100px] tabular-nums">April 9, 2024</p>
+                    <p class="text-neutral-600 dark:text-neutral-400 w-[100px] tabular-nums">{{item.modifiedDate | date}}</p>
                     <p class="text-neutral-900 dark:text-neutral-100 tracking-tight">
-                        Embracing Vim: The Unsung Hero of Code Editors
-                    </p>
-                </div>
-            </a>
-            <a class="flex flex-col space-y-1 mb-4" href="/blog/spaces-vs-tabs">
-                <div class="w-full flex flex-col md:flex-row space-x-0 md:space-x-2">
-                    <p class="text-neutral-600 dark:text-neutral-400 w-[100px] tabular-nums">April 8, 2024</p>
-                    <p class="text-neutral-900 dark:text-neutral-100 tracking-tight">
-                        Spaces vs. Tabs: The Indentation Debate Continues
-                    </p>
-                </div>
-            </a>
-            <a class="flex flex-col space-y-1 mb-4" href="/blog/static-typing">
-                <div class="w-full flex flex-col md:flex-row space-x-0 md:space-x-2">
-                    <p class="text-neutral-600 dark:text-neutral-400 w-[100px] tabular-nums">April 7, 2024</p>
-                    <p class="text-neutral-900 dark:text-neutral-100 tracking-tight">
-                        The Power of Static Typing in Programming
+                        {{item.head}}
                     </p>
                 </div>
             </a>
