--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,12 +1,13 @@
 <main class="flex-auto min-w-0 mt-6 flex flex-col px-2 md:px-0">
-    <aside class="-ml-[8px] mb-16 tracking-tight flex gap-4 justify-start [&>a]:text-gray-500">
+    <aside class="mb-16 tracking-tight flex gap-4 justify-start [&>a]:text-gray-500">
         <!-- Optional content can be added here -->
-         <a routerLink="home" routerLinkActive="!text-black">home</a>
-         <a routerLink="stories" routerLinkActive="!text-black">stories</a>
+         <a routerLink="home" routerLinkActive="!text-black underline underline-offset-4">home</a>
+         <a routerLink="stories" routerLinkActive="!text-black underline underline-offset-4">stories</a>
+         <a routerLink="bth" routerLinkActive="!text-black underline underline-offset-4">behind the scene</a>
     </aside>
     <ng-content />
 
-    <footer class="mb-16">
+    <footer class="mb-16 text-xs">
         <p class="mt-8 text-neutral-600 dark:text-neutral-300">© 2024 MIT Licensed</p>
     </footer>
 </main>
