--- a/src/app/components/stories/stories.component.html
+++ b/src/app/components/stories/stories.component.html
@@ -1,13 +1,19 @@
 <ng-template #loading>
-   <div class="w-full h-[60vh] flex justify-center items-center">
-    <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
-        stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg"
-        class="animate-spin w-6 h-6 stroke-slate-500">
-        <path
-            d="M12 3v3m6.366-.366-2.12 2.12M21 12h-3m.366 6.366-2.12-2.12M12 21v-3m-6.366.366 2.12-2.12M3 12h3m-.366-6.366 2.12 2.12">
-        </path>
-    </svg>
-   </div>
+    <div class="rounded-md w-full mx-auto">
+        <div class="animate-pulse flex space-x-4">
+            <div class="flex-1 space-y-6 py-1">
+                <div class="h-2 w-1/3 bg-slate-200 rounded"></div>
+                <div class="space-y-3">
+                    <div class="h-2 w-full bg-slate-300 rounded mb-2"></div>
+                    <div class="grid grid-cols-3 gap-4">
+                        <div class="h-2 bg-slate-200 rounded col-span-2"></div>
+                        <div class="h-2 bg-slate-200 rounded col-span-1"></div>
+                    </div>
+                    <div class="h-2 bg-slate-200 rounded"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </ng-template>
 
 <ng-container *ngIf="post$ | async as posts; else loading">
